{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 10,
  "lineage": "3dc07a71-19a2-7ee1-6883-929e857b72ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02680ccc4203e3514",
            "association_id": "eipassoc-0a44743cb7431e400",
            "domain": "vpc",
            "id": "eipalloc-02680ccc4203e3514",
            "instance": "i-0b0c946fb5216045e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0880190a4bec8e97d",
            "private_dns": "ip-10-0-1-171.us-east-2.compute.internal",
            "private_ip": "10.0.1.171",
            "public_dns": "ec2-18-190-84-187.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.84.187",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my-ec2-vm",
            "aws_internet_gateway.vpc-dev-igw",
            "aws_security_group.dev-vpc-sg",
            "aws_subnet.vpc-dev-public-subnet-1",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01ca463d85a7b8110",
            "arn": "arn:aws:ec2:us-east-2:357674677184:instance/i-0b0c946fb5216045e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0c946fb5216045e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0880190a4bec8e97d",
            "private_dns": "ip-10-0-1-171.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.171",
            "public_ip": "3.146.178.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03c47d52ddea4dd17",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efd8b7c074320c23",
            "tags": {
              "Name": "myec2vm"
            },
            "tags_all": {
              "Name": "myec2vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e236de02e88c1703"
            ]
          },
          "dependencies": [
            "aws_security_group.dev-vpc-sg",
            "aws_subnet.vpc-dev-public-subnet-1",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:357674677184:internet-gateway/igw-08158c821362a44e3",
            "id": "igw-08158c821362a44e3",
            "owner_id": "357674677184",
            "vpc_id": "vpc-025777a8b45332a95"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-dev-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08158c821362a44e3",
            "id": "r-rtb-03b172bed1e2137d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b172bed1e2137d8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-dev-igw",
            "aws_route_table.vpc-dev-public-route-table",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-dev-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:357674677184:route-table/rtb-03b172bed1e2137d8",
            "id": "rtb-03b172bed1e2137d8",
            "owner_id": "357674677184",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-025777a8b45332a95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-dev-public-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d69a7f44f76e8b64",
            "route_table_id": "rtb-03b172bed1e2137d8",
            "subnet_id": "subnet-0efd8b7c074320c23"
          },
          "dependencies": [
            "aws_route_table.vpc-dev-public-route-table",
            "aws_subnet.vpc-dev-public-subnet-1",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:357674677184:security-group/sg-0e236de02e88c1703",
            "description": "Dev VPC Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e236de02e88c1703",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-vpc-default-sg",
            "name_prefix": "",
            "owner_id": "357674677184",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-025777a8b45332a95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-dev-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:357674677184:subnet/subnet-0efd8b7c074320c23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efd8b7c074320c23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357674677184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-025777a8b45332a95"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:357674677184:vpc/vpc-025777a8b45332a95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2ad0cad87e9ff93",
            "default_route_table_id": "rtb-0de5267b30ffe776c",
            "default_security_group_id": "sg-0ae4a3d756785e436",
            "dhcp_options_id": "dopt-0e88e38baccb9e028",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025777a8b45332a95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de5267b30ffe776c",
            "owner_id": "357674677184",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}